--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "appwrite": "^14.0.1",
     "axios": "^1.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -19,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "sort-by": "^1.2.0"
   },
